# peertube_api_sdk_rust

./: Cargo.toml
examples/: example_get_oauth_client.rs  example_get_oauth_token.rs  example_get_video.rs
src/apis/: abuses_api.rs  account_blocks_api.rs  accounts_api.rs  automatic_tags_api.rs  channels_sync_api.rs  config_api.rs  configuration.rs  homepage_api.rs  instance_follows_api.rs  instance_redundancy_api.rs  job_api.rs  live_videos_api.rs  logs_api.rs  mod.rs  my_history_api.rs  my_notifications_api.rs  my_subscriptions_api.rs  my_user_api.rs  plugins_api.rs  register_api.rs  runner_jobs_api.rs  runner_registration_token_api.rs  runners_api.rs  search_api.rs  server_blocks_api.rs  session_api.rs  static_video_files_api.rs  stats_api.rs  user_exports_api.rs  user_imports_api.rs  users_api.rs  video_api.rs  video_blocks_api.rs  video_captions_api.rs  video_channels_api.rs  video_chapters_api.rs  video_comments_api.rs  video_download_api.rs  video_feeds_api.rs  video_files_api.rs  (+11 more)
src/models/: _api_v1_abuses__abuse_id__messages_get_200_response.rs  _api_v1_abuses__abuse_id__messages_post_request.rs  _api_v1_abuses__abuse_id__put_request.rs  _api_v1_abuses_post_200_response.rs  _api_v1_abuses_post_200_response_abuse.rs  _api_v1_abuses_post_request.rs  _api_v1_abuses_post_request_account.rs  _api_v1_abuses_post_request_comment.rs  _api_v1_abuses_post_request_video.rs  _api_v1_automatic_tags_policies_accounts__account_name__comments_put_request.rs  _api_v1_custom_pages_homepage_instance_put_request.rs  _api_v1_plugins__npm_name__settings_put_request.rs  (+309 more)
