[package]
name = "peertube-api-sdk"
version = "0.1.1-dev"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
reqwest = { version = "0.12.15", features = ["json", "multipart"] }
url = "2.5.4"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }